--- a/app/src/main/res/layout/activity_pub_sport_event.xml
+++ b/app/src/main/res/layout/activity_pub_sport_event.xml
@@ -5,21 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
+    <include layout="@layout/toolbar"/>
+
+
+    <com.nju.ledonghealthhelper.view.LDEditText
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         android:id="@+id/sport_type_et"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"/>
+        android:layout_width="260dp"
+        android:layout_height="40dp"/>
 
-    <EditText
+    <com.nju.ledonghealthhelper.view.LDEditText
         app:layout_constraintTop_toBottomOf="@id/sport_type_et"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/sport_content_et"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"/>
+        android:layout_width="260dp"
+        android:layout_height="40dp"/>
 
     <Button
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,6 +30,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
         android:text="发布"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
