--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,42 +7,49 @@
     android:padding="16dp">
 
     <TextView
+        android:layout_marginTop="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="乐动健康助手"/>
+        android:text="乐动健康助手"
+        android:textSize="30sp"/>
 
     <TextView
+        android:layout_margin="46dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_tv"
         android:id="@+id/sub_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="基于LBS的玉栋社交应用"/>
+        android:textSize="20sp"
+        android:text="—    基于LBS的运动社交应用    —"/>
 
-    <EditText
+    <com.nju.ledonghealthhelper.view.LDEditText
+        android:layout_marginTop="60dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sub_title_tv"
         android:id="@+id/account_et"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="40dp"
         android:hint="请输入账号"/>
 
-    <EditText
+    <com.nju.ledonghealthhelper.view.LDEditText
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/account_et"
         android:id="@+id/password_et"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="40dp"
         android:hint="请输入密码"/>
 
     <Button
+        android:layout_marginTop="40dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/password_et"
@@ -52,6 +59,7 @@
         android:text="登录"/>
 
     <Button
+        android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sign_in_btn"
