--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,41 +5,46 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
+    <include layout="@layout/toolbar"/>
+
     <TextView
         android:id="@+id/title_tv"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""/>
 
-    <EditText
+    <com.nju.ledonghealthhelper.view.LDEditText
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_tv"
         android:id="@+id/account_et"
         android:layout_width="260dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="40dp"/>
 
-    <EditText
+    <com.nju.ledonghealthhelper.view.LDEditText
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/account_et"
         android:inputType="textPassword"
         android:id="@+id/password_et"
         android:layout_width="260dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="40dp"/>
 
-    <EditText
+    <com.nju.ledonghealthhelper.view.LDEditText
+         android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/password_et"
         android:id="@+id/user_name_et"
         android:layout_width="260dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="40dp"/>
 
     <Button
+        android:layout_marginTop="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/user_name_et"
