--- a/app/src/main/res/layout/activity_pub_sport_event.xml
+++ b/app/src/main/res/layout/activity_pub_sport_event.xml
@@ -17,6 +17,7 @@
         android:layout_height="40dp"/>
 
     <com.nju.ledonghealthhelper.view.LDEditText
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/sport_type_et"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -25,6 +26,7 @@
         android:layout_height="40dp"/>
 
     <Button
+        android:id="@+id/pub_btn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
