--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,19 +7,11 @@
 
     <include layout="@layout/toolbar"/>
 
-    <TextView
-        android:id="@+id/title_tv"
+    <com.nju.ledonghealthhelper.view.LDEditText
+        android:layout_marginTop="40dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""/>
-
-    <com.nju.ledonghealthhelper.view.LDEditText
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title_tv"
         android:id="@+id/account_et"
         android:layout_width="260dp"
         android:layout_height="40dp"/>
