--- a/app/src/main/res/layout/item_sport_event.xml
+++ b/app/src/main/res/layout/item_sport_event.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/sport_event_item_bg">
+    android:background="@drawable/sport_event_item_bg"
+    android:paddingBottom="16dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -62,14 +63,19 @@
         android:layout_height="wrap_content"/>
 
     <EditText
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layout_constraintTop_toBottomOf="@id/pub_content_tv"
         android:id="@+id/comment_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/ld_edit_text_bg"
+        android:textSize="16sp"
         android:hint="请输入互动评论"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
