--- a/app/src/main/res/layout/activity_pub_sport_event.xml
+++ b/app/src/main/res/layout/activity_pub_sport_event.xml
@@ -9,6 +9,7 @@
 
 
     <com.nju.ledonghealthhelper.view.LDEditText
+        android:layout_marginTop="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
@@ -22,6 +23,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/sport_content_et"
+        android:layout_width="260dp"
+        android:layout_height="40dp"/>
+
+    <com.nju.ledonghealthhelper.view.LDEditText
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/sport_content_et"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/location_et"
         android:layout_width="260dp"
         android:layout_height="40dp"/>
 
