--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -48,11 +48,22 @@
         android:layout_height="40dp"
         android:hint="请输入密码"/>
 
+    <TextView
+        android:id="@+id/forgot_password_tv"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="70dp"
+        app:layout_constraintTop_toBottomOf="@id/password_et"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="忘记密码" />
+
+
     <Button
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password_et"
+        app:layout_constraintTop_toBottomOf="@id/forgot_password_tv"
         android:id="@+id/sign_in_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
