--- a/app/src/main/res/layout/item_sport_event.xml
+++ b/app/src/main/res/layout/item_sport_event.xml
@@ -62,20 +62,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <EditText
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+
+    <LinearLayout
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         app:layout_constraintTop_toBottomOf="@id/pub_content_tv"
-        android:id="@+id/comment_et"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ld_edit_text_bg"
-        android:textSize="16sp"
-        android:hint="请输入互动评论"/>
+        android:layout_height="40dp">
+
+        <EditText
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            app:layout_constraintTop_toBottomOf="@id/pub_content_tv"
+            android:id="@+id/comment_et"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/ld_edit_text_bg"
+            android:maxLines="1"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:textSize="16sp"
+            android:hint="请输入互动评论"/>
+
+
+        <ImageButton
+            android:padding="4dp"
+            android:layout_marginRight="8dp"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/send_ibtn"
+            android:scaleType="fitCenter"
+            android:background="@null"
+            android:src="@mipmap/send"
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
